expanded the ormservice to have more flexibility primary swagger api documentation was done the action api was completed and minor bugs fixes was done in the existing code base
